# sycl-bench

./: CMakeLists.txt
include/: command_line.h  common.h  time_metrics.h
intel/: nbody.cpp  scalar_prod.cpp  sobel.cpp
single-kernel/: bfs.cpp  black_scholes.cpp  kmeans.cpp  lin_reg_coeff.cpp  matrix_mul.cpp  median.cpp  merse_twister.cpp  mol_dyn.cpp  nbody.cpp  scalar_prod.cpp  sobel.cpp  spgemm.cpp  spmm.cpp  spmv.cpp  vec_add.cpp
